src/test/ui/borrowck/two-phase-cannot-nest-mut-self-calls.stderr
error[E0502]: cannot borrow `vec` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-cannot-nest-mut-self-calls.rs:16:9
   |
LL |     vec.get({
   |     --- --- immutable borrow later used by call
   |     |
   |     immutable borrow occurs here
LL | 
LL |         vec.push(2);
   |         ^^^ mutable borrow occurs here
   |
   = help: try adding a local storing the argument and then using the local in the call

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
